tests/ui/errors/auto-impl.macro.rs
#[fortuples::auto_impl]
trait Test {
    some_macro! {

    }
}

fn main() {}
