tests/ui/errors/auto-impl.macro.stderr
error: `auto_impl` supports only methods
 --> tests/ui/errors/auto-impl.macro.rs:3:5
  |
3 |     some_macro! {
  |     ^^^^^^^^^^
